fix:fix bugs in Retriever class